# noupling

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README.md  llms.txt  resume.md
.agent/knowledge/: external-resources.md  project-map.md  tech-stack.md
.agent/rules/: architecture.md  development.md  github-workflow.md  issue-priority.md  logging.md  rules-guide.md  tasks.md  tdd.md
.agent/skills/: add-language.md  atomic-commit.md  scaffold-doc.md  stitch-ui-design.md  technical-breakdown.md  value-prioritization.md
.agent/workflows/: auto-scaffold-project.md  create-epic-specs.md  create-prd.md  create-roadmap.md  create-story-specs.md  create-ux-flow.md  execute-next-story.md  implement-issue.md
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml  homebrew.yml  noupling-pr.yml  release.yml
.noupling/: settings.json
crates/api_app/: Cargo.toml  README.md
crates/api_app/src/: main.rs
crates/core_logic/: Cargo.toml  README.md
crates/core_logic/src/: error.rs  lib.rs
crates/noupling/: Cargo.toml
crates/noupling/src/: cli.rs  main.rs  settings.rs
crates/noupling/src/core/: mod.rs
crates/noupling/src/slices/: mod.rs
crates/noupling/src/slices/analyzer/: mod.rs
crates/noupling/src/slices/reporter/: html.rs  md.rs  mod.rs
crates/noupling/src/slices/scanner/: discovery.rs  mod.rs  parser.rs  resolver.rs
crates/noupling/src/slices/storage/: db.rs  mod.rs  repository.rs
crates/shared_types/: Cargo.toml  README.md
crates/shared_types/src/: lib.rs
deploy/: Dockerfile
docs/: architecture.md  changelog.html  ci-integration.md  cli-reference.md  configuration.md  docs.html  features.md  getting-started.md  index.html  monorepo.md  report-formats.md  style.css
docs/specifications/: Functional_and_Technical_Requirements.md  roadmap.md
docs/specifications/epics/: 01-project-foundation.md  02-storage-slice.md  03-scanner-slice.md  04-analyzer-slice.md  05-reporter-slice.md  06-cli-integration.md  07-diff-mode.md  08-open-source-readiness.md  09-homebrew-tap.md  10-documentation-overhaul.md  11-cicd-version-management.md  12-gold-standard-readme.md  13-github-project-migration.md
scripts/: install-dev.sh  release.sh  update-homebrew.sh
src/: baseline.rs  cli.rs  diff.rs  hook.rs  main.rs  settings.rs
src/analyzer/: actions.rs  cohesion.rs  coupling.rs  critical_path.rs  cycles.rs  direction.rs  gravity_wells.rs  independence.rs  layers.rs  metrics.rs  mod.rs  monorepo.rs  red_flags.rs  rules.rs  tests.rs  violation_age.rs
src/commands/: audit.rs  baseline.rs  hook.rs  init.rs  mod.rs  report.rs  scan.rs  trend.rs
src/core/: mod.rs
src/reporter/: bundle.rs  bundle_template.html  dashboard.rs  dashboard_template.html  graph.rs  html.rs  md.rs  mod.rs  strategy.rs  strategy_template.html
src/scanner/: discovery.rs  mod.rs  parser.rs  resolver.rs
src/scanner/parsers/: csharp.rs  dart.rs  elixir.rs  go.rs  (+13 more)
src/storage/: db.rs  mod.rs  repository.rs
tasks/backlog/: 01-01-restructure-workspace.md  01-02-core-domain-types.md  01-03-workspace-dependencies.md  01-04-cli-skeleton.md  03-01-file-discovery.md  04-02-bfs-coupling.md  05-01-json-reporter.md  06-01-wire-scan.md  06-03-wire-report.md
tasks/completed/: 01-02-core-domain-types.md  01-03-workspace-dependencies.md  01-04-cli-skeleton.md  02-01-sqlite-auto-init.md  02-02-snapshot-repository.md  02-03-node-repository.md  02-04-dependency-repository.md  03-02-rust-parser.md  03-03-import-resolution.md  03-04-parallel-scanning.md  03-05-unsupported-skip.md  03-06-kotlin-parser.md  03-07-typescript-parser.md  03-08-swift-parser.md  03-09-csharp-parser.md  04-01-dacc-aggregation.md  04-03-severity.md  04-04-health-score.md  04-05-circular-deps.md  05-02-markdown-reporter.md  05-03-html-report.md  06-02-wire-audit.md  06-04-wire-report-md.md
tests/: cli.rs
(+20 files in other folders)
