[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Developer <dev@example.com>"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
clap = { version = "4.0", features = ["derive"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-kotlin-ng = "1.1"
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1.10"
fxhash = "0.2"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.15"
