[package]
name = "noupling"
version = "0.3.0"
edition = "2021"
authors = ["Per-Erik Bergman"]
license = "MIT"
repository = "https://github.com/pererikbergman/noupling"
homepage = "https://github.com/pererikbergman/noupling"
description = "Architecture auditing CLI that detects coupling violations and circular dependencies"
keywords = ["architecture", "coupling", "dependencies", "lint", "static-analysis"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
clap = { version = "4.0", features = ["derive"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-typescript = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-c-sharp = "0.23"
tree-sitter-dart = "0.1"
tree-sitter-go = "0.25"
tree-sitter-haskell = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-zig = "1.1"
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1.10"
fxhash = "0.2"
globset = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.15"
