[package]
name = "noupling"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
rusqlite = { workspace = true }
rayon = { workspace = true }
fxhash = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
