[package]
name = "noupling"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-kotlin-ng = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-swift = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-haskell = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-zig = { workspace = true }
rusqlite = { workspace = true }
rayon = { workspace = true }
fxhash = { workspace = true }
globset = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
